[gd_scene load_steps=5 format=2]

[ext_resource path="res://atlas.png" type="Texture" id=1]
[ext_resource path="res://Vehicle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 24 )

[node name="Vehicle" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 50, 192, 12, 16 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MountArea" type="Area2D" parent="."]
collision_layer = 0

[node name="Shape" type="CollisionShape2D" parent="MountArea"]
shape = SubResource( 2 )

[node name="LeavePosition" type="Position2D" parent="."]
position = Vector2( 3.12282, -12.1166 )

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2( 0.25, 0.25 )

[connection signal="body_entered" from="MountArea" to="." method="onPlayerEnterMountArea"]
[connection signal="body_exited" from="MountArea" to="." method="onPlayerExitMountArea"]
